[tool.poetry]
name = "dh2024-reviewer-matching"
version = "0.1.0"
description = "This project aims to improve on controlled-vocabulary-based matching by adding multilingual text embeddings to recommend matches between reviewers and papers."
authors = ["apjanco <apjanco@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
serpapi = "^0.1.5"
tqdm = "^4.66.1"
chromadb = "^0.4.18"
langchain = "^0.0.345"
uuid = "^1.30"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
